--- a/README
+++ b/README
@@ -1,3 +1,10 @@
+
+Version 1.4.0-beta
+---------------------------
+
+Ticket addressed - 18,  user authentication check changed in 2.1.3
+Fixed loadjQuery problem, this property now works
+
 Version 1.3.0-beta
 ---------------------------
 
